Sistemato file, codice base, correzioni (prima corso / dopo due settimane di corso)

--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>LIME</title>
-    <link rel="stylesheet" href="lime.css"> <!--CREATO COLLEGAMENTO CSS-->
+    <link rel="stylesheet" href="css/lime.css"> <!--CREATO COLLEGAMENTO CSS-->
   </head>
 
   <body>
@@ -11,7 +11,7 @@
     <div id="quadrato"> <!--APRO CONTENITORE PER LO SFONDO QUADRATO-->
 
       <header> <!-- IMMAGINE E TITOLO LIME -->
-        <img src="logo.png" class="logo">
+        <img src="images/logo.png" class="logo">
         <h2 id="titolo">Taking Booleaners from A to B</h2>
       </header>
 
